[package]
name = "gquic"
version = "0.4.0"
edition = "2021"
description = "Production-ready QUIC implementation for crypto and blockchain applications"
license = "MIT"
keywords = ["quic", "crypto", "blockchain", "networking", "protocol"]
categories = ["network-programming", "cryptography"]

[dependencies]
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "time", "sync"] }
bytes = "1.5"
thiserror = "1.0"
# GCC (GhostChain Crypto) - Complete crypto library with AES-GCM, X25519, Ed25519
gcrypt = { git = "https://github.com/ghostkellz/gcrypt", features = ["alloc", "rand_core"], optional = true }
# Fallback crypto stack (only if gcrypt not available)
ring = { version = "0.17", optional = true }
x25519-dalek = { version = "2.0", optional = true }
ed25519-dalek = { version = "2.0", optional = true }
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
anyhow = "1.0"
# TLS 1.3 support
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
webpki-roots = "0.26"
# gRPC support
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true }
# Configuration support
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
num_cpus = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["gcc-crypto"]
gcc-crypto = ["gcrypt", "aes-gcm"]
ring-crypto = ["ring", "x25519-dalek", "ed25519-dalek", "aes-gcm", "rand"]
grpc = ["tonic", "prost", "tokio-stream"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "crypto_example"
path = "examples/crypto_example.rs"
