[package]
name = "gquic"
version = "2024.0.0"
edition = "2021"
description = "Production-ready QUIC implementation for crypto and blockchain applications"
license = "MIT"
keywords = ["quic", "crypto", "blockchain", "networking", "protocol"]
categories = ["network-programming", "cryptography"]

[dependencies]
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "time", "sync"] }
bytes = "1.5"
thiserror = "1.0"
# GCC (GhostChain Crypto) integration
gcrypt = { git = "https://github.com/ghostkellz/gcrypt", optional = true }
# Crypto fallbacks if GCC not available
ring = { version = "0.17", optional = true }
x25519-dalek = { version = "2.0", optional = true }
ed25519-dalek = { version = "2.0", optional = true }
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["ring-crypto"]
gcc-crypto = ["gcrypt"]
ring-crypto = ["ring", "x25519-dalek", "ed25519-dalek", "aes-gcm", "rand"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "crypto_example"
path = "examples/crypto_example.rs"
